elb.tf
# ---------------------------
# ALB
# ---------------------------
resource "aws_lb" "alb" {
  name               = "${var.project}-${var.env}-app-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.web_sg.id]
  subnets = [
    aws_subnet.public_subnet_1a.id,
    aws_subnet.public_subnet_1c.id
  ]
}
